--- a/index.qmd
+++ b/index.qmd
@@ -9,6 +9,13 @@ format:
 editor: visual
 ---
 
+```{r}
+#| echo: false
+
+library(tidyverse)
+
+```
+
 # ¿Cómo vamos a trabajar? (hoy y el resto de sesiones)
 
 ## ¿Cómo vamos a trabajar?
@@ -109,6 +116,350 @@ Y [aquí](https://www.dropbox.com/s/apmr44ko4jbr4t7/01-Visualize.Rmd?dl=0) el .R
 :::
 :::
 
+## 
+
+### Coords
+
+**coord_flip**: para girar los ejes
+
+```{r}
+#| echo: true
+#| eval: false
+
+iris %>% 
+  ggplot() + 
+  geom_boxplot(aes(x = Species, y = Petal.Length)) + 
+  coord_flip()
+
+
+```
+
+```{r}
+#| echo: false
+#| eval: true
+#| fig-align: center
+
+iris %>% 
+  ggplot() + 
+  geom_boxplot(aes(x = Species, y = Petal.Length)) + 
+  coord_flip()
+
+```
+
+## 
+
+### Coords
+
+**coord_polar**: para girar los ejes
+
+```{r}
+#| echo: true
+#| eval: false
+
+mtcars_to_plot <- 
+  mtcars %>% 
+  add_rownames(var = "car_model") %>% 
+  slice_sample(n = 9) %>% 
+  pivot_longer(cols = -car_model) %>% 
+  group_by(name) %>% 
+  mutate(value_norm = value / max(value))
+
+mtcars_to_plot %>% 
+  ggplot() + 
+  geom_col(aes(x = name, y = value_norm), 
+           width = 1, color = "white", size = 0.2) + 
+  coord_polar() + 
+  facet_wrap(~car_model)
+
+
+```
+
+## 
+
+### Coords
+
+**coord_polar**: para girar los ejes
+
+```{r}
+#| echo: false
+#| eval: true
+#| fig-align: center
+
+mtcars_to_plot <- 
+  mtcars %>% 
+  add_rownames(var = "car_model") %>% 
+  slice_sample(n = 9) %>% 
+  pivot_longer(cols = -car_model) %>% 
+  group_by(name) %>% 
+  mutate(value_norm = value / max(value))
+
+mtcars_to_plot %>% 
+  ggplot() + 
+  geom_col(aes(x = name, y = value_norm), 
+           width = 1, color = "white", size = 0.2) + 
+  coord_polar() + 
+  facet_wrap(~car_model)
+
+```
+
+## 
+
+### Themes
+
+-   **Temas completos**: en esta [página](https://ggplot2.tidyverse.org/reference/ggtheme.html) puedes ver qué temas por defecto ya están cargados.
+
+-   **Modificar estilos de un tema**: [aquí](https://ggplot2.tidyverse.org/reference/theme.html) puedes encontrar las decénas de parámetros que podemos personalizar.
+
+## 
+
+### Scales
+
+**scale_xxxxxx_manual**: para indicar a mano los colores
+
+```{r}
+#| echo: true
+#| eval: false
+
+mtcars_to_plot %>% 
+  ggplot() + 
+  geom_col(aes(x = name, y = value_norm, fill = name), 
+           width = 1, color = "white", size = 0.2) + 
+  coord_polar() + 
+  facet_wrap(~car_model, ncol = 3) + 
+  scale_fill_manual(values = c("mpg" = '#a6cee3',
+                               "cyl" = "#1f78b4",
+                               "disp" = "#b2df8a",
+                               "hp" = "#33a02c",
+                               "drat" = "#fb9a99",
+                               "wt" = "#e31a1c",
+                               "qsec" = "#fdbf6f",
+                               "vs" = "#ff7f00",
+                               "am" = "#cab2d6",
+                               "gear" = "#6a3d9a",
+                               "carb" = "#ffff99")) +
+  scale_y_continuous(breaks = c(0, 0.5, 1), 
+                     minor_breaks = NULL) +
+  labs(title = "Un gráfico de prueba", 
+       caption = "Dataset iris", 
+       x = "", y = "") +
+  theme_minimal() + 
+  theme(legend.position = "none")
+
+```
+
+## 
+
+### Scales
+
+**scale_xxxxxx_manual**: para indicar a mano los colores
+
+```{r}
+#| echo: true
+#| eval: false
+
+mtcars_to_plot %>% 
+  ggplot() + 
+  geom_col(aes(x = name, y = value_norm, fill = name), 
+           width = 1, color = "white", size = 0.2) + 
+  coord_polar() + 
+  facet_wrap(~car_model, ncol = 3) + 
+  scale_fill_manual(values = c("mpg" = '#a6cee3',
+                               "cyl" = "#1f78b4",
+                               "disp" = "#b2df8a",
+                               "hp" = "#33a02c",
+                               "drat" = "#fb9a99",
+                               "wt" = "#e31a1c",
+                               "qsec" = "#fdbf6f",
+                               "vs" = "#ff7f00",
+                               "am" = "#cab2d6",
+                               "gear" = "#6a3d9a",
+                               "carb" = "#ffff99")) +
+  scale_y_continuous(breaks = c(0, 0.5, 1), 
+                     minor_breaks = NULL) +
+  labs(title = "Un gráfico de prueba", 
+       caption = "Dataset iris", 
+       x = "", y = "") +
+  theme_minimal() + 
+  theme(legend.position = "none")
+
+```
+
+## 
+
+### Scales
+
+**scale_xxxxxx_brewer**: para colorear con paletas por defecto
+
+```{r}
+#| echo: true
+#| eval: false
+
+mtcars_to_plot %>% 
+  ggplot() + 
+  geom_col(aes(x = name, y = value_norm, fill = name), 
+           width = 1, color = "white", size = 0.2) + 
+  coord_polar() + 
+  facet_wrap(~car_model, ncol = 3) + 
+  scale_fill_brewer(palette = "Set2") +
+  scale_y_continuous(breaks = c(0, 0.5, 1), 
+                     minor_breaks = NULL) +
+  labs(title = "Un gráfico de prueba", 
+       caption = "Dataset iris", 
+       x = "", y = "") +
+  theme_minimal() + 
+  theme(legend.position = "none")
+
+```
+
+## 
+
+### Scales
+
+**scale_xxxxxx_brewer**: para colorear con paletas por defecto
+
+```{r}
+#| echo: false
+#| eval: true
+#| fig-align: center
+
+mtcars_to_plot %>% 
+  ggplot() + 
+  geom_col(aes(x = name, y = value_norm, fill = name), 
+           width = 1, color = "white", size = 0.2) + 
+  coord_polar() + 
+  facet_wrap(~car_model, ncol = 3) + 
+  scale_fill_brewer(palette = "Set2") +
+  scale_y_continuous(breaks = c(0, 0.5, 1), 
+                     minor_breaks = NULL) +
+  labs(title = "Un gráfico de prueba", 
+       caption = "Dataset iris", 
+       x = "", y = "") +
+  theme_minimal() + 
+  theme(legend.position = "none")
+
+```
+
+## 
+
+### Scales
+
+**scale_xxxxxx_distiller**: para colorear valores continuos con una paleta
+
+```{r}
+#| echo: true
+#| eval: false
+#| fig-align: center
+
+mtcars_to_plot %>% 
+  ggplot() + 
+  geom_col(aes(x = name, y = value_norm, fill = value_norm), 
+           width = 1, color = "white", size = 0.2) + 
+  coord_polar() + 
+  facet_wrap(~car_model, ncol = 3) + 
+  scale_fill_distiller(palette = "RdPu", direction = 1) +
+  scale_y_continuous(breaks = c(0, 0.5, 1), 
+                     minor_breaks = NULL) +
+  labs(title = "Un gráfico de prueba", 
+       caption = "Dataset iris", 
+       x = "", y = "") +
+  theme_minimal() + 
+  theme(legend.position = "none")
+
+```
+
+## 
+
+### Scales
+
+**scale_xxxxxx_distiller**: para colorear valores continuos con una paleta
+
+```{r}
+#| echo: false
+#| eval: true
+#| fig-align: center
+
+mtcars_to_plot %>% 
+  ggplot() + 
+  geom_col(aes(x = name, y = value_norm, fill = value_norm), 
+           width = 1, color = "white", size = 0.2) + 
+  coord_polar() + 
+  facet_wrap(~car_model, ncol = 3) + 
+  scale_fill_distiller(palette = "RdPu", direction = 1) +
+  scale_y_continuous(breaks = c(0, 0.5, 1), 
+                     minor_breaks = NULL) +
+  labs(title = "Un gráfico de prueba", 
+       caption = "Dataset iris", 
+       x = "", y = "") +
+  theme_minimal() + 
+  theme(legend.position = "none")
+
+```
+
+## 
+
+### Scales
+
+**scale_xxxxxx_stepsn**: para usar nuestra propia paleta
+
+```{r}
+#| echo: true
+#| eval: false
+
+colors <- c("#0d0887","#5302a3","#8b0aa5","#b83289",
+            "#db5c68","#f48849","#febd2a","#f0f921")
+
+mtcars_to_plot %>% 
+  ggplot() + 
+  geom_col(aes(x = name, y = value_norm, fill = value_norm), 
+           width = 1, color = "white", size = 0.2) + 
+  coord_polar() + 
+  facet_wrap(~car_model, ncol = 3) + 
+  scale_fill_stepsn(n.breaks = length(colors), 
+                    colours = rev(colors)) +
+  scale_y_continuous(breaks = c(0, 0.5, 1), 
+                     minor_breaks = NULL) +
+  labs(title = "Un gráfico de prueba", 
+       caption = "Dataset iris", 
+       x = "", y = "") +
+  theme_minimal() + 
+  theme(legend.position = "none")
+
+```
+
+## 
+
+### Scales
+
+**scale_xxxxxx_stepsn**: para usar nuestra propia paleta
+
+```{r}
+#| echo: false
+#| eval: true
+#| fig-align: center
+
+colors <- c("#0d0887","#5302a3","#8b0aa5","#b83289",
+            "#db5c68","#f48849","#febd2a","#f0f921")
+
+mtcars_to_plot %>% 
+  ggplot() + 
+  geom_col(aes(x = name, y = value_norm, fill = value_norm), 
+           width = 1, color = "white", size = 0.2) + 
+  coord_polar() + 
+  facet_wrap(~car_model, ncol = 3) + 
+  scale_fill_stepsn(n.breaks = length(colors), 
+                    colours = rev(colors)) +
+  scale_y_continuous(breaks = c(0, 0.5, 1), 
+                     minor_breaks = NULL) +
+  labs(title = "Un gráfico de prueba", 
+       caption = "Dataset iris", 
+       x = "", y = "") +
+  theme_minimal() + 
+  theme(legend.position = "none")
+
+```
+
+## 
+
 ## Vamos a hacer un juego
 
 ¿Cómo conseguimos este gráfico?
@@ -141,8 +492,6 @@ A partir de estos datos...
 ```{r}
 #| echo: true
 #| eval: false
-
-library(tidyverse)
 
 url_dataset_1 <- 
   "https://raw.githubusercontent.com/borjandrinot/R-tve-course/main/data_raw/data_bomberos_long.csv?token=GHSAT0AAAAAACBGV6DD3CKXQYP3D4STFQ6WZBVASHA"
@@ -659,3 +1008,34 @@ dataset_5 |>
 ## 
 
 **Ejercicio 10.** A partir de los datos por municipio de las últimas elecciones de Andalucía elige un gráfico y escribe un párrafo con alguna cuestión interesante que observes en él.
+
+# Limpieza y análisis de datos con R
+
+## ¿Qué vamos a ver hoy?
+
+ggplot: una forma especial de pintar
+
+::: incremental
+1.  lectura y escritura de archivos
+2.  tratamiento de cadenas de texto
+3.  manejo de fechas
+4.  joins
+:::
+
+## Teoría
+
+Descarga [aquí](https://www.dropbox.com/s/nhjm6f1tilyirhg/05-Data-Types.pdf?dl=0) las diapositivas de los puntos 1-3 y sus [ejercicios](https://www.dropbox.com/s/lej2qvh4f5i4tx7/05-Data-Types.Rmd?dl=0). [En este enlace](https://www.dropbox.com/s/ufbyfa2q2zat2dy/02-Transform.pdf?dl=0) las diapositivas del 4 y sus [ejercicios](https://www.dropbox.com/s/o6do03f58x9j2vk/02-Transform.Rmd?dl=0).
+
+::: columns
+
+::: {.column width="50%"}
+![](imgs/portada_tema.png){fig-align="center"}
+:::
+
+::: {.column width="50%"}
+
+![](imgs/logo_rmd.png){fig-align="center" width="279"}
+:::
+:::
+
+## Ejercicios
